syntax = "proto3";

package pharmacy;

service PrescriptionService {
    rpc CreatePrescription (Prescription) returns (Response) {
    }
    rpc GetPrescriptions (GetRequest) returns (GetResponse) {
    }
}

message Prescription {
    string id = 1;
    string description = 2;
    int32 quantity = 3;
    repeated Pharmacy pharmacies = 4;
    string carrier_transport_id = 5;
}

message Pharmacy {
    string id = 1;
    string pharmacist_id = 2;
    string pharmacy_location = 3;
    string user_id = 4;
}

message Response {
    bool Drug_created = 1;
    Prescription prescription = 2;
}

message GetResponse {
    repeated Prescription prescriptions = 1;
}

message GetRequest {
}
